# alice2

./: .gitignore  CMakeLists.txt  README.md  README_unified.md  build_unified.ps1
scripts/: DownloadWebGPU.cmake
src/: archived_main.cpp  main.cpp  main_unified.cpp  wgpu_adapter.cpp
src/app/: application.cpp  application.h  camera.cpp  camera.h  input.cpp  input.h  renderer.cpp  renderer.h  scene.cpp  scene.h  unified_application.cpp  unified_application.h  wgpu_device.cpp  wgpu_impl.cpp
src/core/base/: Enumerators.h  Point.cpp  Point.h  Types.h
src/platform/: native_platform.cpp  native_platform.h  platform_factory.cpp  platform_interface.h  web_platform.cpp  web_platform.h
src/platform/web/: CanvasEvents.cpp  CanvasEvents.h  PageEvents.cpp  PageEvents.h  Platform.cpp  shell.html
src/platform/web/ui/: controls.js  styles.css
src/renderer/: unified_renderer.cpp  unified_renderer.h
